	**************************************************
	*						 *
	*	       2.0 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.0.0


USER-VISIBLE CHANGES




NEW FEATURES

    o	file.edit() function added:  like file.show(), but allows editing.


UTILITIES




C-LEVEL FACILITIES




DEPRECATED & DEFUNCT




INSTALLATION CHANGES




BUG FIXES

	
	
	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.

    o	Package 'base' has been split into packages 'base', 'graphics',
	'stats' and 'utils'.  All four are loaded in a default
	installation, but the separation allows a 'lean and mean'
	version of R to be used for tasks such as building indices.

	Packages ctest, eda, modreg, mva, nls, stepfun and ts have been
	merged into stats, and lqs has been returned to MASS.  In all
	cases a stub has been left that will issue a warning and ensure
	that the appropriate new home is loaded.  All the time series
	datasets have been moved to package stats.  Sweave has been
	moved to utils.

	Package mle has been moved to stats4 which will become the
	central place for statistical S4 classes and methods
	distributed with base R.  Package mle remains as a stub.

	Users may notice that code in .Rprofile is run with only the
	new base loaded and so functions may now not be found.	For
	example, ps.options(horizontal = TRUE) should be preceded by
	library(graphics) or called as graphics::ps.options or,
	better, set as a hook -- see ?setHook.

    o	There has been a concerted effort to speed up the startup of