@@ -1,0 +1,5 @@
+## <entry>
+## Deprecated in 1.9.0
+## Defunct in 2.0.0
+package.contents <- function(pkg, lib.loc=NULL) .Defunct()
+## </entry>
