@@ -1,16 +1,15 @@
 \name{utils-deprecated}
 %------ NOTE:  ../R/utils-deprecated.R   must be synchronized with this!
 \alias{utils-deprecated}
-\alias{package.contents}
 \title{Deprecated Functions in Package utils}
 \description{
   These functions are provided for compatibility with older versions of
   \R only, and may be defunct as soon as of the next release.
 }
 \usage{
-package.contents(pkg, lib.loc = NULL)
 }
 \seealso{
+  \code{\link{utils-defunct}},
   \code{\link{Deprecated}}, \code{\link{Defunct}}
 }
 \keyword{internal}
