@@ -18,7 +18,7 @@ names(stop.list) <- core.pkgs
 
 ## -- Stop List for base/graphics/utils:
 edit.int <- c("fix", "edit", "edit.data.frame", "edit.matrix",
-              "edit.default", "vi",
+              "edit.default", "vi", "file.edit",
               "emacs", "pico", "xemacs", "xedit")
 
 ## warning: readLines will work, but read all the rest of the script
